# rust-handbook

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/data/: book.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/part-1/: compiler-clinic.md  index.md  strictness.md
docs/part-2/: enums-and-matching.md  index.md  ownership.md  strings-and-slices.md
docs/part-3/: index.md  traits.md
docs/part-4/: index.md  lifetimes.md  shared-ownership.md
docs/part-5/: index.md  tokio.md
docs/snippets/go/: enum_match.go  error_contracts.go  goroutine_pipeline.go  interface_contract.go  lifetime_escape.go  ownership_escape.go  runtime_tradeoff.go  shared_ownership.go  string_slice.go
docs/snippets/python/: async_blocking.py  enum_match.py  error_contracts.py  lifetime_aliasing.py  ownership_reference.py  protocol_contract.py  runtime_tradeoff.py  shared_ownership.py  string_slice.py
examples/api-contracts/: Cargo.toml
examples/api-contracts/examples/: capability_contracts.rs  error_contracts.rs
examples/api-contracts/src/: lib.rs
examples/api-contracts/tests/: contracts_flow.rs
examples/lifetime-lab/: Cargo.toml
examples/lifetime-lab/examples/: longest.rs
examples/ownership-playbook/: Cargo.toml
examples/shared-ownership-lab/: Cargo.toml
examples/tokio-playbook/: Cargo.toml
examples/ui-harness/: Cargo.toml
scripts/: validate-frontmatter.mts  validate-links.mts  validate-mermaid.mts
(+31 files in other folders)
